--- a/app/views/politics/_form.html.erb
+++ b/app/views/politics/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: politic, local: true) do |form| %>
+<%= simple_form_for(politic) do |form| %>
   <% if politic.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(politic.errors.count, "error") %> prohibited this politic from being saved:</h2>
@@ -10,16 +10,19 @@
       </ul>
     </div>
   <% end %>
-
+    <%= form.input :description, as: :text %>
+    <%= form.input :politician_id, as: :hidden %>
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description, id: :politic_description %>
+    <select id="hashtags-type" name="politic[first_type]">
+        <option value="0">內政</option>
+        <option value="1">交通</option>
+        <option value="2">經濟</option>
+        <option value="3">教育文化</option>
+        <option value="4">青年發展</option>
+        <option value="5">公民政治</option>
+    </select>
   </div>
 
-  <div class="field">
-    <%= form.label :politician_id %>
-    <%= form.number_field :politician_id, id: :politic_politician_id %>
-  </div>
 
   <div class="actions">
     <%= form.submit %>
