--- a/app/views/politicians/_form.html.erb
+++ b/app/views/politicians/_form.html.erb
@@ -50,17 +50,21 @@ a:visited{
       <div class="hashtags-board">
           <% @hashtags.each do |h| %>             
             <% if p.first_type.to_i == h.politic_type_id.to_i %>
-              <%= check_box_tag :hashtag_ids,h.id, form.object.hashtags.include?(h), :name => "politic[hashtag_ids][]",class:"boolean optional" %>
+              <%= check_box_tag :hashtag_ids,h.id, form.object.hashtags.include?(h), :name => "politic[hashtag_ids][]",class:"boolean optional second-type#{p.id}" %>
               <%= h.name %>
             <% end %>
           <% end %>
       </div>  
       <input type="hidden" value=<%= p.hashtags.pluck(:id)%>>
+      <input type="hidden" class="politic-id" value=<%= p.id %>>
       <%= form.submit "更新政見", :class => "btn btn-sm btn-primary" %>   
       <input type="button" class="btn btn-sm btn-danger delete-politic" data-id="<%= p.id %>" value="刪除">
     <% end %>
   <% end %>
 <% end %>
+<br>
+<br>
+<input type="button" class="btn btn-warning" id="update-all" value="更新全部政見">
 
 <script>
 $(function(){
@@ -88,26 +92,74 @@ $(function(){
     var hashtag_ids = select.parent().next().next().val()
     console.log(hashtag_ids)
     $.ajax({ 
-            type : "POST", 
-            url : "/hashtags/", 
-            data : {'type': type},
-            success : function(result) { 
-                var element = ""
-                for(var i = 0; i < result.length; i++){
-                  if(hashtag_ids.includes(result[i].id)){
-                    element += `<input type="checkbox" name="politic[hashtag_ids][]" id="hashtag_ids" value="${result[i].id}" class="boolean optional" checked="checked">${result[i].name}`
-                  }
-                  else{
-                    element += `<input type="checkbox" name="politic[hashtag_ids][]" id="hashtag_ids" value="${result[i].id}" class="boolean optional">${result[i].name}`
-                  }
-                }
-                select.parent().next().html("")
-                select.parent().next().append(element)
-            }, 
-            error : function(result) { 
-                //handle the error
-            } 
+      type : "POST", 
+      url : "/hashtags/", 
+      data : {'type': type},
+      success : function(result) { 
+          var element = ""
+          for(var i = 0; i < result.length; i++){
+            if(hashtag_ids.includes(result[i].id)){
+              element += `<input type="checkbox" name="politic[hashtag_ids][]" id="hashtag_ids" value="${result[i].id}" class="boolean optional" checked="checked">${result[i].name}`
+            }
+            else{
+              element += `<input type="checkbox" name="politic[hashtag_ids][]" id="hashtag_ids" value="${result[i].id}" class="boolean optional">${result[i].name}`
+            }
+          }
+          select.parent().next().html("")
+          select.parent().next().append(element)
+      }, 
+      error : function(result) { 
+          //handle the error
+      } 
     });  
   })
+
+  $("#update-all").click(function(){
+    var politic_ids = $(".politic-id")
+    var politic_descriptions = $('textarea[name="politic[description]"')
+    var politic_first_types = $('select[name="politic[first_type]"')
+    var politic_hashtags = []
+    for(var i=0; i< politic_ids.length; i++){
+      politic_hashtags.push($(`.second-type${politic_ids[i].value}:checked`))
+      politic_ids[i] = politic_ids[i].value
+    }
+
+    for(var i=0; i< politic_descriptions.length; i++){
+      politic_descriptions[i] = politic_descriptions[i].value
+    }
+
+    for(var i=0; i< politic_first_types.length; i++){
+      politic_first_types[i] = politic_first_types[i].value
+    }
+
+    for(var i=0; i< politic_hashtags.length; i++){
+      for(var j=0; j< politic_hashtags[i].length; j++){
+        politic_hashtags[i][j] = politic_hashtags[i][j].value
+      }
+      politic_hashtags[i] = politic_hashtags[i].toArray()
+    }
+
+    politic_datas = [politic_ids.toArray(), politic_descriptions.toArray(), politic_first_types.toArray(), politic_hashtags]
+    new_politic_datas = []
+    for(var i=0;i < politic_datas[0].length;i++ ){
+        var new_p_data = [politic_datas[0][i],politic_datas[1][i],politic_datas[2][i],politic_datas[3][i]]
+        new_politic_datas.push(new_p_data)
+    }
+
+
+    $.ajax({
+      type : "POST", 
+      url : "/ajax_update",
+      data : {'data': JSON.stringify(new_politic_datas)},
+      success : function(result) { 
+        window.location.reload()
+      }, 
+      error : function(result) { 
+          //handle the error
+      }                  
+    })  
+       
+
+  }) 
 })
 </script>
