enlarge add politic section

--- a/app/views/politics/_form.html.erb
+++ b/app/views/politics/_form.html.erb
@@ -1,3 +1,10 @@
+<style>
+textarea{
+  width: 500px;
+  height: 500px;
+}
+</style>
+
 <%= simple_form_for(politic) do |form| %>
   <% if politic.errors.any? %>
     <div id="error_explanation">
