--- a/app/views/politics/index.html.erb
+++ b/app/views/politics/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Politics</h1>
-
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 <table>
   <thead>
     <tr>
