--- a/app/views/politicians/playground.html.erb
+++ b/app/views/politicians/playground.html.erb
@@ -1,3 +1,6 @@
 <div id='app'></div>
 <%= stylesheet_link_tag '/playground/dist/css/playground.css' %>
 <%= javascript_include_tag '/playground/dist/js/playground.js' %>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/9.27.0/js/vendor/jquery.ui.widget.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/9.27.0/js/jquery.fileupload.js" crossorigin="anonymous"></script>
