--- a/app/views/politicians/playground.html.erb
+++ b/app/views/politicians/playground.html.erb
@@ -1,3 +1,6 @@
+<input id="name" type="hidden" value="<%= @user.name %>">
+<input id="avatar" type="hidden" value="<%= @user.remote_avatar_url %>">
+
 <div id='app'></div>
 <%= stylesheet_link_tag '/playground/dist/css/playground.css' %>
 <%= javascript_include_tag '/playground/dist/js/playground.js' %>
