--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,183 @@
  *= require_tree .
  *= require_self
  */
+ @font-face {
+  font-family: "Zpix";
+  src: url("Zpix.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "JF-Dot-Kappa-20-Bold";
+  src: url("JF-Dot-Kappa-20-Bold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "JF-Dot-jiskan24h-2000";
+  src: url("JF-Dot-jiskan24h-2000.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #f1f1f1;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, Geneva, "Heiti TC",
+    "Microsoft JhengHei", sans-serif;
+}
+#outcome {
+  min-height: 100vh;
+  padding: 10px 0;
+}
+
+.btn-check {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.intro-wrapper {
+  perspective: 150px;
+  height: 100vh;
+}
+
+.intro {
+  overflow: hidden;
+  transform-style: preserve-3d;
+  transform: rotateX(10deg);
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.intro-text {
+  font-family: "Zpix";
+  color: #e7c34e;
+  font-size: 40px;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.outcome-wrapper {
+  min-height: 100vh;
+}
+.outcome-wrapper .title {
+  font-family: "Zpix";
+  font-size: 2.5em;
+}
+
+.outcome {
+  height: 100%;
+}
+
+.card-wrapper {
+  height: 450px;
+}
+.card-wrapper .card-inner {
+  position: relative;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  height: 100%;
+}
+.card-wrapper .card {
+  border: 2px solid;
+  font-family: "Zpix";
+  padding: 16px;
+  height: 100%;
+}
+.card-wrapper .card .photo-wrapper {
+  margin-top: 10px;
+}
+.card-wrapper .card .photo {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: #7c7b79;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  border: 2px solid #7c7b79;
+  margin-bottom: 10px;
+}
+.card-wrapper .card .name {
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+.card-wrapper .card .policy {
+  font-size: 0.6em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.card-wrapper .card .slogan {
+  color: red;
+  font-size: 1.6em;
+  text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+  font-weight: 800;
+  font-family: "JF-Dot-jiskan24h-2000";
+}
+.card-wrapper .card .more-policy {
+  color: #e7c34e;
+  font-size: 0.6em;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.card-wrapper .card .number-wrapper {
+  position: absolute;
+  left: 15px;
+  top: 0;
+}
+.card-wrapper .card .number {
+  border: 2px solid #ff0000;
+  color: #ff0000;
+  font-size: 1.4em;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+}
+.card-wrapper #radar {
+  width: 100%;
+  height: auto;
+}
+.card-wrapper .card-back {
+  background: url(../../assets/card.png) no-repeat center center;
+  background-size: 110%;
+}
+.card-wrapper .card-back .name {
+  margin: 0;
+  color: #ff0000;
+  font-size: 2em;
+  text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+  font-weight: 500;
+  font-family: "JF-Dot-jiskan24h-2000";
+}
+.card-wrapper .card-back-header {
+  position: relative;
+}
+#flip-card:checked + .card-inner {
+  transform: rotateY(180deg);
+}
+
+@media screen and (max-width: 767px) {
+  .outcome-wrapper .title {
+    font-size: 8vw;
+  }
+
+  .intro-text {
+    font-size: 8vw;
+  }
+
+  .button {
+    font-size: 1em;
+    width: 100px;
+  }
+}
