--- a/app/views/politicians/result.html.erb
+++ b/app/views/politicians/result.html.erb
@@ -65,7 +65,7 @@ a{
 
 
 
-<div class="container">
+<div id="result-page" class="container">
   <div class="row">
     <div class="outcome-wrapper col-12">
       <div class="outcome row justify-content-center align-items-center">
