--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <%= csrf_meta_tags %>
     <link rel="icon" href="/playground/public/favicon.png">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta property="og:title"       content="一個議員的誕生，完美配對你最像哪個議員！" />
-    <meta property="og:description" content="透過精心設計的問題，幫你找出你最像的議員，一起參政吧！！" />
+    <meta property="og:title"       content="一個議員的誕生🌟完美配對最像的議員！" />
+    <meta property="og:description" content="大選要到了❗️是否看過政見了呢?透過有趣的參選之路，一起發掘政見最Match的議員吧！" />
     <meta property="og:image" content="https://www.taiwanbunbun.com/playground/public/title.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
